--- a/sample/src/App.css
+++ b/sample/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  background-color: green;
   text-align: center;
 }
 
@@ -26,6 +27,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.firstClass{
+  font-weight: bold;
+  color: pink;
 }
 
 @keyframes App-logo-spin {
